FIxes gap on contact page

--- a/css/styles.css
+++ b/css/styles.css
@@ -281,11 +281,12 @@ fieldset {
     font-size: 1.5rem;
     font-weight: 600;
     text-decoration-line: none;
-    color: white; 
-    text-transform: uppercase; 
-    margin: 20px auto; 
+    color: white;
+    text-transform: uppercase;
+    /* margin: 20px auto; */
     padding: 10px 40px;
     border-radius: 5px;
+    display: inline-block;
   }
 
 .cta-green {
@@ -645,7 +646,7 @@ header a {
      }
      .contact_container {
         display: grid;
-        column-gap: 1em;
+        gap: 1em;
         grid-template-columns: 1fr;
     }
     .white_logo {
